2008-11-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* configure.ac: Added merged-translation-import.plx.in.

	* examples/merged-translation-import.plx.in: Added script.

2008-11-25  Johan Euphrosine <proppy@aminche.com>

	* Release 1.0.17

	* pokernetwork/pokerservice.py, tests/test-pokerservice.py.in:
	  delay tourneyDeleteRoute using reactor.callLater

2008-11-25  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerservice.py, tests/test-pokerservice.py.in: the
	  ping delay is measured in seconds, not milliseconds
	* database/1.6.0-1.7.0.sql, database/schema.sql.in,
	  pokernetwork/pokerservice.py, tests/test-pokerservice.py.in,
	  tests/test-servercrash.py.in: add currency_serial column to the
	  user2tourney table ( https://gna.org/support/?2176 )
	* pokernetwork/pokerservice.py, tests/test-pokerservice.py.in:
	  create money without requiring a bailor if the bailor serial is
	  zero (useful for playmoney sites)
	* pokernetwork/pokerpackets.py: indent comments of Monitor packet
	* database/schema.sql.in: better comment for the
	  currency_serial_from_date_format field
	* pokernetwork/pokerservice.py: remove useless line from
	  tourneySelect

2008-11-25  Thomas Johnson <thomas.johnson@phpfreaks.com>

	* pokernetwork/pokerservice.py, tests/test-pokerservice.py.in:
	  Additional refactoring
	* pokernetwork/pokerservice.py, tests/test-pokerservice.py.in:
	  removed cleanUpOldCompleted and edited tourneySelect to not
	  return completed tournaments older than the specified hours

2008-11-24  Loic Dachary <loic@dachary.org>

	* tests/test-attrpack.py.in, tests/test-clientserver.py.in,
	  tests/test-pokercashier.py.in, tests/test-pokerlock.py.in,
	  tests/test-pokerservice.py.in, tests/test-protocol.py.in: replace
	  class foo(): with class foo: for python2.4 compatibility

2008-11-24  Thomas Johnson <thomas.johnson@phpfreaks.com>

	* conf/poker.server.xml.in, pokernetwork/pokerservice.py,
	  tests/test-pokerservice.py.in: fixed bug from #2173 and added
	  #2171
